Added `max_bytes` setting to allow truncating of log lines.
Added a Builder to aid in building a Writer.
Added max_bytes truncation test.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ log = { version = "0.4", features = ["std"] }
 
 [dev-dependencies]
 anyhow = { version = "1.0" }
+serial_test = {version = "0.5" }
