--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ categories = ["development-tools::debugging"]
 
 [dependencies]
 flexi_logger = { version = "0.22", default_features = false }
-libc = {version = "0.2" }
+syslog = { version = "6.0" }
 log = { version = "0.4", features = ["std"] }
 
 [dev-dependencies]
