--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ repository = "https://github.com/ObsceneGiraffe/flexi_syslog"
 documentation = "https://docs.rs/flexi_syslog"
 homepage = "https://crates.io/crates/flexi_syslog"
 description = "A syslog writer for flexi_logger"
-keywords = ["file", "logger", "syslog"]
+keywords = ["file", "logger", "logs", "logging", "syslog", "flexi-logger"]
 categories = ["development-tools::debugging"]
 
 [dependencies]
