--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "flexi_syslog"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 license = "MIT OR Apache-2.0"
 readme = "README.md"
@@ -8,7 +8,7 @@ repository = "https://github.com/ObsceneGiraffe/flexi_syslog"
 documentation = "https://docs.rs/flexi_syslog"
 homepage = "https://crates.io/crates/flexi_syslog"
 description = "A syslog writer for flexi_logger"
-keywords = ["file", "logger", "logs", "logging", "syslog", "flexi-logger"]
+keywords = ["logger", "logging", "syslog", "flexi-logger"]
 categories = ["development-tools::debugging"]
 
 [dependencies]
