--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,9 @@ categories = ["development-tools::debugging"]
 
 [dependencies]
 flexi_logger = { version = "0.22", default_features = false }
-syslog = { version = "6.0" }
 log = { version = "0.4", features = ["std"] }
+syslog = { version = "6.0" }
+time = { version = "0.3.5", features = ["local-offset", "formatting", "macros", "parsing"] }
 
 [dev-dependencies]
 anyhow = { version = "1.0" }
