--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,10 +12,10 @@ keywords = ["logger", "logging", "syslog", "flexi-logger"]
 categories = ["development-tools::debugging"]
 
 [dependencies]
+chrono = "0.4.22"
 flexi_logger = { version = "0.22", default_features = false }
 log = { version = "0.4", features = ["std"] }
 syslog = { version = "6.0" }
-time = { version = "0.3.5", features = ["local-offset", "formatting", "macros", "parsing"] }
 
 [dev-dependencies]
 anyhow = { version = "1.0" }
