--- a/deny.toml
+++ b/deny.toml
@@ -3,14 +3,10 @@ vulnerability = "deny"
 unmaintained = "deny"
 notice = "deny"
 unsound = "deny"
-ignore = [
-    # `time` Potential segfault in the time crate
-    # https://rustsec.org/advisories/RUSTSEC-2020-0071
-    "RUSTSEC-2020-0071",
-]
+ignore = []
 
 [bans]
-multiple-versions = "allow"
+multiple-versions = "warn"
 wildcards = "deny"
 # private package can use wildcard paths such as `package.workspace = true`
 allow-wildcard-paths = true
@@ -19,17 +15,29 @@ deny = []
 [sources]
 unknown-registry = "deny"
 unknown-git = "deny"
+# List of URLs for allowed crate registries. Defaults to the crates.io index
+# if not specified. If it is specified but empty, no registries are allowed.
+allow-registry = ["https://github.com/rust-lang/crates.io-index"]
+# List of URLs for allowed Git repositories
+allow-git = []
+
+[sources.allow-org]
+# 1 or more github.com organizations to allow git sources for
+github = []
 
 [licenses]
 unlicensed = "deny"
 allow-osi-fsf-free = "neither"
 copyleft = "deny"
+default = "deny"
 # We want really high confidence when inferring licenses from text
 confidence-threshold = 0.93
-# ignore the local workspace crates
-private = { ignore = true }
 # (extending this list is only allowed after agreement by TD management)
 allow = ["Apache-2.0", "MIT"]
+
+# ignore the local workspace crates
+[licenses.private]
+ignore = true 
 
 [[licenses.exceptions]]
 allow = ["Unicode-DFS-2016"]
