--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,9 @@ parking_lot = "0.12.1"
 syslog_fmt = { path = "../syslog-suite/syslog-fmt", package = "syslog_fmt" }
 syslog_net = { path = "../syslog-suite/syslog-net", package = "syslog_net" }
 
+[dev-dependencies]
+rand = "0.8.5"
+
 [[test]]
 name = "should_handle_socket_shutdown"
 harness = false
