--- a/deny.toml
+++ b/deny.toml
@@ -1,13 +1,5 @@
 [advisories]
-vulnerability = "deny"
-unmaintained = "deny"
-notice = "deny"
-unsound = "deny"
-ignore = [
-    # `time` Potential segfault in the time crate
-    # https://rustsec.org/advisories/RUSTSEC-2020-0071
-    "RUSTSEC-2020-0071",
-]
+version = 2
 
 [bans]
 multiple-versions = "allow"
@@ -21,9 +13,7 @@ unknown-registry = "deny"
 unknown-git = "deny"
 
 [licenses]
-unlicensed = "deny"
-allow-osi-fsf-free = "neither"
-copyleft = "deny"
+version = 2
 # We want really high confidence when inferring licenses from text
 confidence-threshold = 0.93
 # ignore the local workspace crates
